--- a/app/views/resources/index.html.erb
+++ b/app/views/resources/index.html.erb
@@ -7,7 +7,7 @@
                 <hr></hr>
             </div>
         </div>  
-<!--     <div class="subnav">
+<!--<div class="subnav">
       <ul class="nav nav-pills">
         <li><a href="#wui">WUI</a></li>
         <li><a href="#txwrap">TXWrap</a></li>
@@ -17,23 +17,23 @@
         <li><a href="#contact">Contact AFD</a></li>
       </ul>
     </div> -->
-</header><!--
-Contact AFD
--->
-<div class="container-fluid">   
+</header>
+<div class="container-fluid learn-columnhack">   
         <div class="span10">    
             <section  id="wui">
             <img src="assets/wuihouse.png">
                 <h2>What is the <a href="http://wildlandfirersg.org/Learn/content.cfm?ItemNumber=646&navItemNumber=505">Wildland Urban Interface?</a></h2>
-                <p>A <a href="http://wildlandfirersg.org/Learn/content.cfm?ItemNumber=646&navItemNumber=505">wildland–urban interface</a> refers to the zone of transition between unoccupied land and human development. Communities that are within 0.5 miles (0.80 km) of the zone may also be included. These lands and communities adjacent to and surrounded by wildlands are at risk of wildfires.</p><br>
+                <p>A <a href="http://wildlandfirersg.org/Learn/content.cfm?ItemNumber=646&navItemNumber=505">wildland–urban interface</a> refers to the zone of transition between unoccupied land and human development. Communities that are within a half mile of the zone may also be included. These lands and communities adjacent to and surrounded by wildlands are at risk of wildfires.</p>
+                <br>
+                <br>
+                <br>
             </section>   
-    </div> 
-   <!-- Commented this out b/c it was running into then appearing behind the image
-     <div class="sub-section">
-        <div class="index-butt"> 
-            <hr></hr>
-        </div>
-    </div>      -->
+            <div class="sub-section">
+                <div class="index-butt"> 
+                    <hr></hr>
+                </div>
+            </div> 
+        </div>  
     <div class="span5">
             <section id="conditions">
                 <h2>Local Conditions</h2>
@@ -54,7 +54,7 @@ Contact AFD
                 Watch this <a href="http://www.youtube.com/watch?v=1EtXNUeBG8M">short Ready, Set, Go! introductory video</a> about the devastating speed of wildfires driven by winds and flying embers, then begin preparing your home with the tips in this <a href="http://www.youtube.com/watch?v=MN8Kre62nz4">Ready, Set, Go! how-to video</a>.</p>
                 <br />
             </section>
-        </div>
+    </div>
     <div class="sub-section">
         <div class="index-butt"> 
             <hr></hr>
@@ -75,6 +75,5 @@ Contact AFD
                 <p>Wildfire Prevention expert Lt. Josh Portie and other specialists at AFD are available to answer brief questions and coordinate on-site & neighborhood visits in the Austin area. <a href="../contacts/new">Ask a question here</a>.
                 </p>
              </section>      
-        </div>  
-     </div> <!--end column-full-->    
-</div> <!--end column wrapper-->
+    </div>  
+</div>
