--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,9 +30,9 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </a>
-        <% if user_signed_in? %> <!--show logo in nav for signed in users -->
+        <!--< if user_signed_in? %> <!--show logo in nav for signed in users
             <a class="brand" href="#"><img src="/assets/preparedly-nav-blue.png" width="119px" height="20px"></a>
-        <% end %>  
+        < end %>  -->
         <div class="nav-collapse">
           <ul class="nav navbar-items pull-right">
             <li class=""><a href="/"> home</a></li>
@@ -123,6 +123,7 @@ if (typeof GSFN !== "undefined") { GSFN.loadWidget(761,{"containerId":"getsat-wi
 
 <%= yield :javascript_yield %> 
 <%= javascript_include_tag "application" %>
+
 <script>
 // //-- subnav -->
 
