fix link to contact on resource page

--- a/app/views/resources/index.html.erb
+++ b/app/views/resources/index.html.erb
@@ -72,7 +72,7 @@
     <div class="span5"> 
             <section id="contact">
                 <h2> Contact AFD</h2>
-                <p>Wildfire Prevention expert Lt. Josh Portie and other specialists at AFD are available to answer brief questions and coordinate on-site & neighborhood visits in the Austin area. <a href="#contact-section">Ask a question here</a>.
+                <p>Wildfire Prevention expert Lt. Josh Portie and other specialists at AFD are available to answer brief questions and coordinate on-site & neighborhood visits in the Austin area. <a href="../#contact-section">Ask a question here</a>.
                 </p>
              </section>      
     </div>  
