update Task and User models to remove unnecessary relationship, fixes RailsAdmin; add jquery form validate to Contact form, update About Burn Ban

--- a/app/views/layouts/_dashboard.html.erb
+++ b/app/views/layouts/_dashboard.html.erb
@@ -8,6 +8,8 @@
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <%= javascript_include_tag "wax.leaflet.min.js" %>
   <%= javascript_include_tag "cartodb-leaflet.js" %>
+  <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.9/jquery.validate.min.js"></script>
+  <%= javascript_include_tag "validate.js" %>
 <% end %>
 <div class="tabbable tabs-left">
     <div class="row-fluid dash">
