--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -1,27 +1,16 @@
-<h3>Submit questions and receive answers unique to your property or situation,<br />
-Schedule on-site consultations with wildfire prevention experts,<br />
-and work with experts to make your neighborhood Firewise.</h3>
+<ul><li>Submit questions and receive answers unique to your property or situation</li>
+<li>Schedule on-site consultations with wildfire prevention experts</li>
+<li>Work with experts to make your neighborhood Firewise</li></ul>
 
 <%= form_for(@contact) do |f| %>
-  <% if @contact.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@contact.errors.count, "error") %> prohibited this contact from being saved:</h2>
-
-      <ul>
-      <% @contact.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
+<%= error_messages_for :contact -%>
   <div class="field">
     <%= f.label :name %><br />
-    <%= f.text_field :name %>
+    <%= f.text_field :name, :name => 'name' %>
   </div>
   <div class="field">
     <%= f.label :email %><br />
-    <%= f.text_field :email, :value => @user.email %>
+    <%= f.text_field :email, :value => @user.email, :name => 'email' %>
   </div>
   <div class="field">
     <%= f.label :contact_type %><br />
@@ -29,7 +18,7 @@ and work with experts to make your neighborhood Firewise.</h3>
   </div>
   <div class="field">
     <%= f.label :body %><br />
-    <%= f.text_area :body, :rows => '15' %>
+    <%= f.text_area :body, :rows => '15', :name => 'body' %>
   </div>
   <div class="actions" >
     <%= f.submit "Submit", :class => "btn btn-success btn" %>
