remove navbar logo since windows firefox was displaying it wrong despite comments, comment some js causing IE errors

--- a/app/views/layouts/_dashboard.html.erb
+++ b/app/views/layouts/_dashboard.html.erb
@@ -133,8 +133,8 @@
         </div>
     </div>
 </div>
-<script>
-//-- refresh task div without reloading page -->
+<!-- <script>
+ refresh task div without reloading page 
 $("#skip").click(function(e){
   e.preventDefault();   
   $.get("/tasks-partial",
@@ -142,4 +142,4 @@ $("#skip").click(function(e){
         $("#retask").html(response);
   });
 });
-</script>
+</script> -->
