--- a/app/views/layouts/_dashboard.html.erb
+++ b/app/views/layouts/_dashboard.html.erb
@@ -1,10 +1,10 @@
 <% content_for :stylesheet_yield do %>
-  <link rel="stylesheet" href="http://code.leafletjs.com/leaflet-0.3.1/leaflet.css">
-  <link rel="stylesheet" href="http://code.leafletjs.com/leaflet-0.3.1/leaflet.ie.css">
+  <%= stylesheet_link_tag "leaflet.css" %>
+  <%= stylesheet_link_tag "leaflet.ie.css" %>
 <% end %>
 <% content_for :javascript_yield do %>
   <!-- scripts -->
-  <script src="http://code.leafletjs.com/leaflet-0.3.1/leaflet.js"></script>
+  <%= javascript_include_tag "leaflet.js" %>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <%= javascript_include_tag "wax.leaflet.min.js" %>
   <%= javascript_include_tag "cartodb-leaflet.js" %>
