--- a/app/assets/stylesheets/leaflet.css
+++ b/app/assets/stylesheets/leaflet.css
@@ -137,11 +137,11 @@ a.leaflet-active {
 	height: 27px;
 	}
 .leaflet-control-zoom-in {
-	background-image: url(assets/zoom-in.png);
+	background-image: url(zoom-in.png);
 	margin-bottom: 5px;
 	}
 .leaflet-control-zoom-out {
-	background-image: url(assets/zoom-out.png);
+	background-image: url(zoom-out.png);
 	}
 
 .leaflet-control-layers {
