--- a/app/views/resources/index.html.erb
+++ b/app/views/resources/index.html.erb
@@ -66,7 +66,7 @@
                 <p>If you live in an at-risk area or WUI, becoming a Firewise Community makes a big difference in insuring your area is safer. Learn about other Firewise Communities, organize a Firewise Day, create a community action plan and more.
                 <br />
                 <br />
-                <a href="http://www.firewise.org/Communities/USA-Recognition-Program/Program-criteria.aspx">Get started here</a> on the five steps to becoming a Firewise community. For step 1, contact <a href="../contacts/new">Austin Fire Department</a> or your <a href="http://submissions.nfpa.org/firewise/fw_state_liaisons.php">state liaison</a> if you're in a different area.</p>
+                <a href="http://www.firewise.org/Communities/USA-Recognition-Program/Program-criteria.aspx">Get started here</a> on the five steps to becoming a Firewise community. For step 1, contact <a href="../#contact-section">Austin Fire Department</a> or your <a href="http://submissions.nfpa.org/firewise/fw_state_liaisons.php">state liaison</a> if you're in a different area.</p>
             </section>  
     </div>          
     <div class="span5"> 
