--- a/app/views/devise/menu/_login_items.html.erb
+++ b/app/views/devise/menu/_login_items.html.erb
@@ -4,5 +4,10 @@
 	</li>
 <% else %>
 	<li><%= link_to('Register', new_user_registration_path)  %></li>
-	<li><a data-toggle="modal" href="#signin" >Sign in</a></li>
+	<div id="modal-on">
+		<li><a data-toggle="modal" href="#signin">Sign in</a></li>
+	</div>
+	<div id="modal-off">
+		<li><a href="/users/sign_in">Sign in</a></li>
+	</div>	
 <% end %>
