added update your browser message for outdated browsers

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
   <meta property="og:image" content="http://www.prepared.ly/assets/preparedly-bigblue.png"/>
   <meta property="og:description"
           content="Prepared.ly is a simple way for you to stay informed and proactive about the ongoing threat of wildfires."/>
+  <script type="text/javascript" src="http://updateyourbrowser.net/uyb.js"> </script>
   <%= stylesheet_link_tag "jquery-ui" %>
   <%= stylesheet_link_tag "bootstrap", :media => "all" %>
   <!--this must be third to last, add all others above this -->
