Add id to sign up and sign in links for tracking clicks

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -20,7 +20,7 @@
     </div>
     <h5><a data-toggle="modal" href="#terms">Please review our registration and use policy</a></h5>
     <div>
-        <%= f.submit "Sign Up", :class => 'btn btn-info' %>
+        <%= f.submit "Sign Up", :class => 'btn btn-info', :id => 'SignUp' %>
     </div>
     <% end %>
     <br />
