--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -17,6 +17,10 @@
     <%= f.select(:contact_type, [['Schedule an on-site visit'], ['Get help organizing a community cleanup day'], ['Ask a question about your home or area'], ['General inquiry about wildfire preparedness']] ) %>
   </div>
   <div class="field">
+    <%= f.label :recipient, "Choose your location (more coming soon!)" %><br />
+    <%= f.select(:recipient, [['Austin', ENV['AUSTIN_EMAIL']], ['Williamson County', 'WILCO_EMAIL'], ['Lakeway', 'LAKEWAY_EMAIL'], ['Other', 'TX_EMAIL']] ) %>
+  </div>
+  <div class="field">
     <%= f.label :body %><br />
     <%= f.text_area :body, :class => 'required', :rows => '15' %>
   </div>
