--- a/app/views/layouts/_dashboard.html.erb
+++ b/app/views/layouts/_dashboard.html.erb
@@ -31,7 +31,7 @@
                                 <div class="controls">
                                     <div class="map-butt">
                                         <p class="note">Please enter your street address or zip code.</p>
-                                        <%= text_field_tag(:q, nil,  :value => @user.address, :class => 'address form-inline input-xx-large') %>
+                                        <%= text_field_tag(:q, nil,  :value => @user.address, :class => 'address form-inline input-large') %>
                                         <%= submit_tag("Load my map", :class => 'btn-success btn', :id => 'loadMap') %>
                                     </div>
                                 </div>   
