--- a/app/views/share/index.html.erb
+++ b/app/views/share/index.html.erb
@@ -75,7 +75,7 @@ Share Link: <input size=35 value="http://www.prepared.ly/?ref=<%= @share_code %>
             <h2>Ready, Set, Go! <a href="http://www.youtube.com/watch?v=MN8Kre62nz4">How To video</a></h2>
             <p>Watch a <a href="http://www.youtube.com/watch?v=1EtXNUeBG8M">short introductory video</a> illustrating the devastating speed of wildfires driven by winds and flying embers.
             <h2>Contact AFD</h2>
-              <p>Wildfire Prevention expert Lt. Josh Portie and other specialists at AFD are available to answer brief questions and coordinate on-site & neighborhood visits in the Austin area. Send an email <a href="../contacts/new">here</a>.</p>
+              <p>Wildfire Prevention expert Lt. Josh Portie and other specialists at AFD are available to answer brief questions and coordinate on-site & neighborhood visits in the Austin area. Send an email <a href="../#contact-section">here</a>.</p>
         </div>
     </div><!--end column-full-->    
 </div> <!--end column wrapper-->
