--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -18,9 +18,7 @@
   </div>
   <div class="field">
     <%= f.label :recipient, "Choose your location (more coming soon!)" %><br />
-    <% debugger %>
-
-    <%= f.select(:recipient, [['Austin', ENV['AUSTIN_EMAIL']], ['Williamson County', ENV['WILCO_EMAIL']], ['Lakeway', ENV['LAKEWAY_EMAIL']], ['Other', ENV['TX_EMAIL']]] ) %>
+    <%= f.select(:recipient, [['Austin', ENV['AUSTIN_EMAIL']], ['Other', ENV['TX_EMAIL']]] ) %>
   </div>
   <div class="field">
     <%= f.label :body %><br />
