--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,6 +47,12 @@
       </div>
     </div>
   </div>
+<div id="maintenance">
+
+<p>Prepared.ly is undergoing maintenance and account access is disabled. Please come back later. We apologize for the inconcenience!
+  <i class="icon-exclamation-sign"></i>
+</p>
+</div>
 <div class="container" id="main-wrap">      
   <div id="beta"></div>   
   <div id="main">       
