--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,7 +49,7 @@
   </div>
 <div id="maintenance">
 
-<p>Prepared.ly is undergoing maintenance and account access is disabled. Please come back later. We apologize for the inconcenience!
+<p>Prepared.ly is undergoing maintenance and account access is disabled. Please come back later. We apologize for the inconvenience!
   <i class="icon-exclamation-sign"></i>
 </p>
 </div>
