--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -118,7 +118,7 @@
   </div> 
 </div>
 <div id="getsat-widget-761"></div>
-<script type="text/javascript" src="https://loader.engage.gsfn.us/loader.js"></script>
+<script type="text/javascript" src="http://loader.engage.gsfn.us/loader.js"></script>
 <script type="text/javascript">
 if (typeof GSFN !== "undefined") { GSFN.loadWidget(761,{"containerId":"getsat-widget-761"}); }
 </script>
