--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -103,13 +103,38 @@ select,
 .learn-columnhack .span10 {
   max-width: 800px;
 }
-<<<<<<< HEAD
-  
-/*input {
-  margin: 10px;
-  padding: 5px;
-}*/
-=======
+.warning {
+    background-color: #F4D345;
+}
+.simplestep ol, .simplestep li{
+  font-size: 78px;
+  list-style: decimal;
+  color: #ffffff;
+  list-style-position: inside;
+  background-color: #F4D345;
+  margin-top: 0px;
+
+}
+.simplestep h1 {
+  padding: 0px 10px 5px 70px;
+  background-color: #ffffff;
+  margin-top: -80px;
+}
+.simplestep p {
+  font-size: 15px;
+  padding: 0px 10px 5px 70px;
+
+}
+.simplestep hr {
+    background: url("bg-blue.png") repeat scroll 0 0 #ffffff;
+    border-bottom: 8px solid #FFFFFF;
+    border-top: 8px solid #FFFFFF;
+    height: 26px;
+}
+.simplestep h1, .simplestep p {
+  color: #666666;
+  background-color: #F4D345;
+}
 #maintenance {
   background-color: #F4D345;
   height: 67px;
@@ -121,7 +146,6 @@ select,
   margin-top: 40px;
 }
 
->>>>>>> dashboard
 .note {
   font-size: 12px;
   font-weight: 500;
