remove id from each dashboard tab

--- a/app/views/layouts/_dashboard.html.erb
+++ b/app/views/layouts/_dashboard.html.erb
@@ -21,7 +21,7 @@
                 <div class="tab-content">
 <!-- //////////////////// Map ///////////////////////// -->        
                     <section id="map-section" class="tab-pane"> 
-                        <ul id="myTab" class="nav nav-tabs dash-tabs">
+                        <ul class="nav nav-tabs dash-tabs">
                             <li class="active note">
                                 <a href="#home" data-toggle="tab">
                                 LOCATION AND CURRENT CONDITIONS</a>
@@ -44,7 +44,7 @@
                     </section> 
 <!-- //////////////////// tasks ///////////////////////// -->        
                     <section id ="task-section" class="tab-pane">
-                        <ul id="myTab" class="nav nav-tabs dash-tabs">
+                        <ul class="nav nav-tabs dash-tabs">
                             <li class="active note">
                                 <a href="#home" data-toggle="tab">
                                 YOUR TASK SHOULD YOU CHOOSE TO ACCEPT:</a>
@@ -58,7 +58,7 @@
                     </section> 
 <!-- //////////////////// notifications/account stuff ///////////////////////// -->        
                     <section id="notify-section" class="tab-pane"> 
-                        <ul id="myTab" class="nav nav-tabs dash-tabs">
+                        <ul class="nav nav-tabs dash-tabs">
                             <li class="active note">
                                 <a href="#home" data-toggle="tab">
                                 YOUR ACCOUNT:</a>
@@ -88,7 +88,7 @@
                         </section> 
 <!-- //////////////////// contact AFD ///////////////////////// -->        
                         <section id="contact-section" class="tab-pane">
-                        <ul id="myTab" class="nav nav-tabs dash-tabs">
+                        <ul class="nav nav-tabs dash-tabs">
                             <li class="active note">
                                 <a href="#home" data-toggle="tab">
                                 CONTACT AN EXPERT:</a>
