move location of data-toggle into ul elements in dashboard tabs

--- a/app/views/layouts/_dashboard.html.erb
+++ b/app/views/layouts/_dashboard.html.erb
@@ -19,9 +19,9 @@
                 <div class="tab-content">
 <!-- //////////////////// Map ///////////////////////// -->        
                     <section id="map-section" class="tab-pane"> 
-                        <ul class="nav nav-tabs dash-tabs">
+                        <ul class="nav nav-tabs dash-tabs" data-toggle="tab">
                             <li class="active note">
-                                <a href="#home" data-toggle="tab">
+                                <a href="#home">
                                 LOCATION AND CURRENT CONDITIONS</a>
                             </li>
                         </ul>
@@ -42,9 +42,9 @@
                     </section> 
 <!-- //////////////////// tasks ///////////////////////// -->        
                     <section id ="task-section" class="tab-pane">
-                        <ul class="nav nav-tabs dash-tabs">
+                        <ul class="nav nav-tabs dash-tabs" data-toggle="tab">
                             <li class="active note">
-                                <a href="#home" data-toggle="tab">
+                                <a href="#home">
                                 YOUR TASK SHOULD YOU CHOOSE TO ACCEPT:</a>
                             </li>
                         </ul>
@@ -56,9 +56,9 @@
                     </section> 
 <!-- //////////////////// notifications/account stuff ///////////////////////// -->        
                     <section id="notify-section" class="tab-pane"> 
-                        <ul class="nav nav-tabs dash-tabs">
+                        <ul class="nav nav-tabs dash-tabs" data-toggle="tab">
                             <li class="active note">
-                                <a href="#home" data-toggle="tab">
+                                <a href="#home">
                                 YOUR ACCOUNT:</a>
                             </li>
                         </ul> 
@@ -86,9 +86,9 @@
                         </section> 
 <!-- //////////////////// contact AFD ///////////////////////// -->        
                         <section id="contact-section" class="tab-pane">
-                        <ul class="nav nav-tabs dash-tabs">
+                        <ul class="nav nav-tabs dash-tabs" data-toggle="tab">
                             <li class="active note">
-                                <a href="#home" data-toggle="tab">
+                                <a href="#home">
                                 CONTACT AN EXPERT:</a>
                             </li>
                         </ul>
