shuffling the data-toggle attribute to different elements so IE wakes up..

--- a/app/views/layouts/_dashboard.html.erb
+++ b/app/views/layouts/_dashboard.html.erb
@@ -16,7 +16,7 @@
         <div class="container-fluid">
             <div class="span9">
             <p id="notice"><%= alert %></p>
-                <div class="tab-content">
+                <div class="tab-content" data-tabs="tabs">
 <!-- //////////////////// Map ///////////////////////// -->        
                     <section id="map-section" class="tab-pane"> 
                         <ul class="nav nav-tabs dash-tabs" data-toggle="tab">
