change name of href for each tab

--- a/app/views/layouts/_dashboard.html.erb
+++ b/app/views/layouts/_dashboard.html.erb
@@ -20,7 +20,7 @@
                     <section id="map-section" class="tab-pane"> 
                         <ul class="nav nav-tabs dash-tabs" data-toggle="tab">
                             <li class="active note">
-                                <a href="#home">
+                                <a href="#map-section">
                                 LOCATION AND CURRENT CONDITIONS</a>
                             </li>
                         </ul>
@@ -43,7 +43,7 @@
                     <section id ="task-section" class="tab-pane">
                         <ul class="nav nav-tabs dash-tabs" data-toggle="tab">
                             <li class="active note">
-                                <a href="#home">
+                                <a href="#task-section">
                                 YOUR TASK SHOULD YOU CHOOSE TO ACCEPT:</a>
                             </li>
                         </ul>
@@ -57,7 +57,7 @@
                     <section id="notify-section" class="tab-pane"> 
                         <ul class="nav nav-tabs dash-tabs" data-toggle="tab">
                             <li class="active note">
-                                <a href="#home">
+                                <a href="#notify-section">
                                 YOUR ACCOUNT:</a>
                             </li>
                         </ul> 
@@ -87,7 +87,7 @@
                         <section id="contact-section" class="tab-pane">
                         <ul class="nav nav-tabs dash-tabs" data-toggle="tab">
                             <li class="active note">
-                                <a href="#home">
+                                <a href="#contact-section">
                                 CONTACT AN EXPERT:</a>
                             </li>
                         </ul>
