move map div so it is loaded when leaflet ie needs it

--- a/app/views/layouts/_dashboard.html.erb
+++ b/app/views/layouts/_dashboard.html.erb
@@ -30,7 +30,9 @@
                                 </div>
                             </div>   
                         <% end %>  
+                        <div id="map"><!-- Map inserts here --></div>
                         <div id="mapinfo"> 
+
                         <!-- post.js.erb puts the map contents here --> 
                         </div>
                     </div>
